Cleaning up code to support JAR production: - Adding JavaDoc - Replacing static strings with constants - Moving static files underneath resource directory